--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to CSS Grid Practice</h1>
+        header
     </header>
     <main>
       <div class="container">
@@ -16,10 +16,11 @@
         <div class="box box2">box2</div>
         <div class="box box3">box3</div>
         <div class="box box4">box4</div>
+        <div class="box box5">box5</div>
       </div>
     </main>
     <footer>
-        <p>&copy; 2023 CSS Grid Practice</p>
+        footer
     </footer>
 </body>
 </html>
